# docs/swagger.json
@@ -9,6 +9,64 @@
     "host": "localhost:8085",
     "basePath": "/api/war-onk",
     "paths": {
+        "/product-create": {
+            "post": {
+                "description": "Create a new product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Create a new product",
+                "parameters": [
+                    {
+                        "description": "Product data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/presenter.ProductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/presenter.ProductResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/products": {
             "get": {
                 "description": "Get All Product",
@@ -19,7 +77,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "hello v1"
+                    "Product"
                 ],
                 "summary": "Get All Product",
                 "parameters": [
@@ -68,11 +126,11 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/dto.ProductResponse"
+                                                "$ref": "#/definitions/presenter.ProductResponse"
                                             }
                                         },
                                         "meta": {
-                                            "$ref": "#/definitions/dto.Meta"
+                                            "$ref": "#/definitions/response.Meta"
                                         }
                                     }
                                 }
@@ -96,24 +154,40 @@
         }
     },
     "definitions": {
-        "dto.Meta": {
+        "helper.Response": {
             "type": "object",
             "properties": {
-                "page": {
+                "code": {
                     "type": "integer"
                 },
-                "page_size": {
-                    "type": "integer"
+                "data": {},
+                "message": {
+                    "type": "string"
                 },
-                "total_data": {
-                    "type": "integer"
-                },
-                "total_page": {
+                "meta": {},
+                "status": {
                     "type": "integer"
                 }
             }
         },
-        "dto.ProductResponse": {
+        "presenter.ProductRequest": {
+            "type": "object",
+            "properties": {
+                "product_name": {
+                    "type": "string"
+                },
+                "product_stock": {
+                    "type": "integer"
+                },
+                "purchase_price": {
+                    "type": "number"
+                },
+                "selling_price": {
+                    "type": "number"
+                }
+            }
+        },
+        "presenter.ProductResponse": {
             "type": "object",
             "properties": {
                 "product_name": {
@@ -133,18 +207,19 @@
                 }
             }
         },
-        "helper.Response": {
+        "response.Meta": {
             "type": "object",
             "properties": {
-                "code": {
+                "page": {
                     "type": "integer"
                 },
-                "data": {},
-                "message": {
-                    "type": "string"
+                "page_size": {
+                    "type": "integer"
                 },
-                "meta": {},
-                "status": {
+                "total_data": {
+                    "type": "integer"
+                },
+                "total_page": {
                     "type": "integer"
                 }
             }
